fix(ui): fix issues with code overflows and fix theme

--- a/static/codehilite.css
+++ b/static/codehilite.css
@@ -3,9 +3,9 @@ td.linenos .normal { color: inherit; background-color: transparent; padding-left
 span.linenos { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
 td.linenos .special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
 span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
-.highlight .hll { background-color: #222222 }
-.highlight { background: #000000; color: #cccccc }
-.highlight .c { color: #000080 } /* Comment */
+.highlight .hll { background-color: #222222; }
+.highlight { background: #000000; color: #cccccc; overflow-x: scroll; overflow-y: hidden;}
+.highlight .c { color: #5c6370 } /* Comment */
 .highlight .err { color: #cccccc; border: 1px solid #FF0000 } /* Error */
 .highlight .esc { color: #cccccc } /* Escape */
 .highlight .g { color: #cccccc } /* Generic */
@@ -15,11 +15,11 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 .highlight .o { color: #3399cc } /* Operator */
 .highlight .x { color: #cccccc } /* Other */
 .highlight .p { color: #cccccc } /* Punctuation */
-.highlight .ch { color: #000080 } /* Comment.Hashbang */
-.highlight .cm { color: #000080 } /* Comment.Multiline */
-.highlight .cp { color: #000080 } /* Comment.Preproc */
-.highlight .cpf { color: #000080 } /* Comment.PreprocFile */
-.highlight .c1 { color: #000080 } /* Comment.Single */
+.highlight .ch { color: #5c6370 } /* Comment.Hashbang */
+.highlight .cm { color: #5c6370 } /* Comment.Multiline */
+.highlight .cp { color: #5c6370 } /* Comment.Preproc */
+.highlight .cpf { color: #5c6370 } /* Comment.PreprocFile */
+.highlight .c1 { color: #5c6370 } /* Comment.Single */
 .highlight .cs { color: #cd0000; font-weight: bold } /* Comment.Special */
 .highlight .gd { color: #cd0000 } /* Generic.Deleted */
 .highlight .ge { color: #cccccc; font-style: italic } /* Generic.Emph */
